# speed

./: .gitignore  CLAUDE.md  LICENSE  README.md  environment.yml  pyproject.toml
doc/: _config.yml  _toc.yml  intro.md  overview.md
doc/notebooks/: dataset_organization.ipynb
notebooks/: dataset_organization.ipynb
scripts/: extract_mrms_collocations_atms.sh  extract_mrms_collocations_gmi.sh  extract_wegener_net_collocations.sh
speed/: __init__.py  cli.py  logging.py  plotting.py
speed/data/: __init__.py  amedas.py  ancillary.py  cloudsat.py  combined.py  cpcir.py  goes.py  gpm.py  gpm_gv.py  himawari.py  ibtracks.py  input.py  kma.py  mrms.py  noaa.py  ocean_rain.py  reference.py  seviri.py  training_data.py  utils.py  wegener_net.py
speed/data/sensor_characteristics/: amsr2.toml  atms.toml  gmi.toml  mhs.toml
speed/grids/: __init__.py  global.yml
test/: conftest.py  test_grids.py
test/data/: test_ancillary.py  test_combined.py  test_gpm_gv.py  test_mrms.py  test_utils.py  test_wegener_net.py
