[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "speed"
authors = [
    {name = "Simon Pfreundschuh", email = "simon.pfreundschuh@colostate.edu"},
]
description = "The IPWG Satellite Precipitation Estimate Evaluation Dataset"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["geophysics", "satellite_data", "precipitation", "rain", "estimation"]
license = {text = "MIT"}
dependencies = [
    "click",
    "cmocean",
    "toml",
    "rich",
    "numpy",
    "xarray",
    "matplotlib",
    "cartopy",
    "pyresample",
    "dask",
    "filelock",
    "gprof-nn",
    "requests",
    "boto3",
    "netcdf4",
    "h5py",
    "scipy",
    "shapely"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff"
]
test = [
    "pytest",
    "pytest-cov"
]

[project.scripts]
speed = "speed.cli:cli"

[tool.setuptools]
packages = ["speed"]

[tool.setuptools.dynamic]
version = {attr = "speed.VERSION"}

